src/test/deca/context/valid/ClassMathode10.deca
// Description:
//   Teste de instanceof
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022
class A {
    int a;
}

{
	A a=new A();
	if(a instanceof A) {
        print("yes");
    }
}