src/test/deca/context/invalid/classmethode21.deca
class A{
    int a;
    int getA(int a){
        this.a=a;
    }
}
{
    A a=new A();
    a.getA("no");
}